# bvh

./: .clang_format  CMakeLists.txt  README.md
3pty/catch2/: CMakeLists.txt
bvh/: CMakeLists.txt
bvh/include/bvh/: bvh.hpp
bvh/src/: bvh.cpp
bvh/tests/: test_bvh.cpp
bvh/tests/data/: sphere.stl
